k3s-userapps/seedbox/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: seedbox
spec:
  basicAuth:
    secret: seedbox
---
# Prefixing with /foo
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: addrutorrent
  namespace: seedbox
spec:
  addPrefix:
    prefix: /rutorrent
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: host-rewrite
  namespace: seedbox
spec:
  headers:
    customRequestHeaders:
      Host: transporter.myseedbox.site
