k3s-userapps/seedbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: seedbox
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: caddy
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: caddy
    spec:
      containers:
        - image: 'caddy:2.11.3'
          imagePullPolicy: IfNotPresent
          name: caddy
          ports:
            - containerPort: 80
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /etc/caddy
              name: caddy
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: caddy
          secret:
            secretName: seedbox
