k3s-userapps/seedbox/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: seedbox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: seedbox
