k3s-userapps/seedbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: seedbox-addrutorrent@kubernetescrd,seedbox-basic-auth@kubernetescrd,seedbox-host-rewrite@kubernetescrd
    cert-manager.io/cluster-issuer: acme-issuer
#    gethomepage.dev/enabled: "true"
#    gethomepage.dev/href: "https://overseerr.kirillorlov.pro"
#    gethomepage.dev/group: Media
#    gethomepage.dev/name: Overserr
#    gethomepage.dev/icon: overseerr.png
#    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=overseerr"
#    gethomepage.dev/widget.type: overseerr
#    gethomepage.dev/widget.url: http://overseerr.media.svc.cluster.local
#    gethomepage.dev/widget.key: "$OVERSEERR_TOKEN$"
#    kirillorlov.pro/annotationsFromSecretName: plex-secret
  name: seedbox
  namespace: seedbox
spec:
  rules:
  - host: seedbox.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: external-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - seedbox.kirillorlov.pro
    secretName: seedbox-tls
